--- a/Pipelines/Develop-Inte.yml
+++ b/Pipelines/Develop-Inte.yml
@@ -101,10 +101,10 @@ stages:
         ArtifactName: 'drop'
         publishLocation: 'Container'
 
-- stage: Deploy
+- stage: DeployIntegration
   dependsOn: Build
   jobs:
-  - job: DevInte
+  - job: DeployToIntegration
     displayName: 'Deploy to Integration'
     pool:
       vmImage: 'windows-latest'
