#34 DeployTo: Support of IncludeBlob and IncludeDb

--- a/Pipelines/Master-IntePrepProd.yml
+++ b/Pipelines/Master-IntePrepProd.yml
@@ -132,6 +132,8 @@ stages:
         TargetEnvironment: 'Integration'
         SourceApp: 'cms'
         UseMaintenancePage: false
+        IncludeBlob: false
+        IncludeDb: false
         Timeout: 1800
 
     - task: DxpSmokeTestIfFailReset@1
@@ -181,6 +183,8 @@ stages:
               TargetEnvironment: 'Preproduction'
               SourceApp: 'cms'
               UseMaintenancePage: false
+              IncludeBlob: false
+              IncludeDb: false
               Timeout: 1800
 
           - task: DxpSmokeTestIfFailReset@1
@@ -231,6 +235,8 @@ stages:
               TargetEnvironment: 'Production'
               SourceApp: 'cms'
               UseMaintenancePage: false
+              IncludeBlob: false
+              IncludeDb: false
               Timeout: 1800
 
           - task: DxpSmokeTestIfFailReset@1
