Added checkout none to reset pipeline

--- a/Pipelines/Reset-IntePrepProd.yml
+++ b/Pipelines/Reset-IntePrepProd.yml
@@ -4,6 +4,8 @@ variables:
 - group: DXP-variables
 
 stages:
+- checkout: none  # Don't sync sources
+
 - stage: Reset
   jobs:
   - job: ResetIntegration
