--- a/Pipelines/Develop-Inte.yml
+++ b/Pipelines/Develop-Inte.yml
@@ -143,6 +143,8 @@ stages:
         TargetEnvironment: 'Integration'
         Urls: '$(Integration.SlotUrl)$(Integration.UrlSuffix)'
         SleepBeforeStart: 20
+        NumberOfRetries: 5
+        SleepBeforeRetry: 30
         Timeout: 1800
 
     - task: DxpCompleteDeploy@1
