--- a/Pipelines/Release-PrepProd.yml
+++ b/Pipelines/Release-PrepProd.yml
@@ -190,6 +190,8 @@ stages:
               TargetEnvironment: 'Production'
               Urls: '$(Production.SlotUrl)$(Production.UrlSuffix)'
               SleepBeforeStart: 20
+              NumberOfRetries: 5
+              SleepBeforeRetry: 30
               Timeout: 1800
 
           - task: DxpCompleteDeploy@1
