--- a/Pipelines/Sync-PrepInte.yml
+++ b/Pipelines/Sync-PrepInte.yml
@@ -32,6 +32,8 @@ steps:
     TargetEnvironment: 'Integration'
     Urls: '$(Integration.SlotUrl)$(Integration.UrlSuffix)'
     SleepBeforeStart: 20
+    NumberOfRetries: 5
+    SleepBeforeRetry: 30
     Timeout: 1800
 
 - task: DxpCompleteDeploy@1
