--- a/Pipelines/Sync-ProdPrep.yml
+++ b/Pipelines/Sync-ProdPrep.yml
@@ -32,6 +32,8 @@ steps:
     TargetEnvironment: 'Preproduction'
     Urls: '$(Preproduction.SlotUrl)$(Preproduction.UrlSuffix)'
     SleepBeforeStart: 20
+    NumberOfRetries: 5
+    SleepBeforeRetry: 30
     Timeout: 1800
 
 - task: DxpCompleteDeploy@1
