--- a/Pipelines/Develop-Inte.yml
+++ b/Pipelines/Develop-Inte.yml
@@ -4,6 +4,11 @@ trigger:
     include:
     - develop
 
+parameters:
+- name: DirectDeploy
+  default: true
+  type: boolean
+
 variables:
 - group: DXP-variables
 #- name: webProjectDirectory
@@ -133,9 +138,11 @@ stages:
         TargetEnvironment: 'Integration'
         SourceApp: 'cms'
         UseMaintenancePage: false
+        DirectDeploy: ${{ parameters.DirectDeploy }}
         Timeout: 1800
 
     - task: DxpSmokeTestIfFailReset@1
+      condition: and(succeeded(), eq('${{ parameters.DirectDeploy }}', false))
       inputs:
         ClientKey: '$(ClientKey)'
         ClientSecret: '$(ClientSecret)'
@@ -148,6 +155,7 @@ stages:
         Timeout: 1800
 
     - task: DxpCompleteDeploy@1
+      condition: and(succeeded(), eq('${{ parameters.DirectDeploy }}', false))
       inputs:
         ClientKey: '$(ClientKey)'
         ClientSecret: '$(ClientSecret)'
