--- a/Pipelines/Master-IntePrepProd.yml
+++ b/Pipelines/Master-IntePrepProd.yml
@@ -4,6 +4,11 @@ trigger:
     include:
     - master
 
+parameters:
+- name: DirectDeploy
+  default: true
+  type: boolean
+
 variables:
 - group: DXP-variables
 #- name: webProjectDirectory
@@ -133,11 +138,13 @@ stages:
         TargetEnvironment: 'Integration'
         SourceApp: 'cms'
         UseMaintenancePage: false
+        DirectDeploy: ${{ parameters.DirectDeploy }}
         IncludeBlob: false
         IncludeDb: false
         Timeout: 1800
 
     - task: DxpSmokeTestIfFailReset@1
+      condition: and(succeeded(), eq('${{ parameters.DirectDeploy }}', false))
       inputs:
         ClientKey: '$(ClientKey)'
         ClientSecret: '$(ClientSecret)'
@@ -150,6 +157,7 @@ stages:
         Timeout: 1800
 
     - task: DxpCompleteDeploy@1
+      condition: and(succeeded(), eq('${{ parameters.DirectDeploy }}', false))
       inputs:
         ClientKey: '$(ClientKey)'
         ClientSecret: '$(ClientSecret)'
