--- a/src/ExpectStatus/ExpectStatusV2/package.json
+++ b/src/ExpectStatus/ExpectStatusV2/package.json
@@ -2,7 +2,7 @@
     "name": "NodePsTaskWrapper",
     "description": "Node PS Task Wrapper To Load on non Windows OS",
     "scripts": {
-    "build": "npm run clean && npm run lint && npm run transpile ",
+    "build": "npm run lint && npm run transpile ",
     "package": "npm prune -production && npm run copy",
     "copy": "ncp ./node_modules ./task/node_modules && ncp ./dist/src ./task",
     "clean": "rimraf ./dist/src && rimraf ./dist/test && rimraf ./task/*.js && rimraf ./task/*.js.map && rimraf ./task/node_modules",
