--- a/src/ExpectStatus/ExpectStatusV2/package.json
+++ b/src/ExpectStatus/ExpectStatusV2/package.json
@@ -2,36 +2,31 @@
     "name": "NodePsTaskWrapper",
     "description": "Node PS Task Wrapper To Load on non Windows OS",
     "scripts": {
-    "build": "npm run lint && npm run transpile ",
-    "package": "npm prune -production && npm run copy",
-    "copy": "ncp ./node_modules ./task/node_modules && ncp ./dist/src ./task",
-    "clean": "rimraf ./dist/src && rimraf ./dist/test && rimraf ./task/*.js && rimraf ./task/*.js.map && rimraf ./task/node_modules",
-    "transpile": "tsc -p ./",
-    "lint": "tslint -c tslint.json src/*.ts test/*.ts",
-    "test": "mocha -r ts-node/register ./test/*.test.ts --reporter mocha-junit-reporter --reporter-options mochaFile=./test-output/test-results.xml ",
-    "test-no-logger": "mocha -r ts-node/register ./test/*.test.ts "
+        "build": "npm run clean && npm run transpile",
+        "buildclean": "npm run clean",
+        "buildtranspile": "npm run transpile",
+        "package": "npm prune -production && npm run copy",
+        "copy": "ncp ./node_modules ./task/node_modules && ncp ./dist/src ./task",
+        "clean": "rimraf ./dist/src && rimraf ./dist/test && rimraf ./task/*.js && rimraf ./task/*.js.map && rimraf ./task/node_modules",
+        "transpile": "tsc --project ./"
     },
     "main": "test.js",
     "dependencies": {
-    "azure-devops-node-api": "^8.0.0",
-    "fs": "0.0.1-security",
-    "ncp": "^2.0.0",
-    "rimraf": "^2.6.2",
-    "vsts-task-lib": "^2.7.0"
+        "azure-devops-node-api": "^11.0.1",
+        "ncp": "^2.0.0",
+        "rimraf": "^3.0.2",
+        "azure-pipelines-task-lib": "^3.1.8"
     },
     "devDependencies": {
-    "@types/chai": "^4.0.4",
-    "@types/mocha": "^2.2.44",
-    "@types/node": "^10.12.2",
-    "chai": "^3.5.0",
-    "del": "^4.0.0",
-    "mocha": "^5.2.0",
-    "mocha-junit-reporter": "^1.15.0",
-    "ts-node": "^3.3.0",
-    "tslint": "^5.9.1",
-    "typescript": "^3.5.3",
-    "typings": "^2.1.1"
+        "@types/node": "^v16.7.9",
+        "del": "^4.0.0",
+        "ts-node": "^10.2.1",
+        "typescript": "^4.4.2"
     },
-    "author": "Richard Fennell",
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:Epinova/epinova-dxp-deployment.git"
+    },
+    "author": "Ove Lartelius",
     "license": "MIT"
-    }
+}
