:art: change displaynames

--- a/build-node-task.yml
+++ b/build-node-task.yml
@@ -6,6 +6,7 @@ parameters:
 
 steps:  
 - task: Npm@1
+  displayName: '${{parameters.taskName}}: npm install'
   inputs:
     command: 'install'
     workingDir: '${{parameters.extensionRoot}}\\${{parameters.taskName}}'
@@ -19,27 +20,27 @@ steps:
 #     testDirectory: '${{parameters.extensionRoot}}\\${{parameters.taskName}}'
 
 - task: Npm@1
-  displayName: 'npm run build for ${{parameters.taskName}}'
+  displayName: '${{parameters.taskName}}: npm run build'
   inputs:
     command: 'custom'
     workingDir: '${{parameters.extensionRoot}}\\${{parameters.taskName}}'
     customCommand: 'run build'
 
 # - task: Npm@1
-#   displayName: 'npm run test for ${{parameters.taskName}}'
+#   displayName: '${{parameters.taskName}}: npm run test'
 #   inputs:
 #     command: 'custom'
 #     workingDir: '${{parameters.extensionRoot}}\\${{parameters.taskName}}'
 #     customCommand: 'run test'
 
 # - task: PublishTestResults@2
-#   displayName: 'Publish Test Results for ${{parameters.taskName}}'
+#   displayName: '${{parameters.taskName}}: Publish Test Results'
 #   inputs:
 #     cwd: '${{parameters.extensionRoot}}\\${{parameters.taskName}}'
 #     testRunTitle: '${{parameters.taskName}}'
 
 - task: Npm@1
-  displayName: 'npm run package for ${{parameters.taskName}}'
+  displayName: '${{parameters.taskName}}: npm run package'
   inputs:
     command: 'custom'
     workingDir: '${{parameters.extensionRoot}}\\${{parameters.taskName}}'
