:art: polish yml task displayname

--- a/build-test-package.yml
+++ b/build-test-package.yml
@@ -44,6 +44,7 @@ steps:
       taskName: 'ExpectStatus\ExpectStatusV2'
 
   - task: Npm@1
+    displayName: 'npm install extension'
     inputs:
       command: 'install'
       workingDir: '$(System.DefaultWorkingDirectory)\src'
