--- a/src/ExpectStatus/ExpectStatusV2/package.json
+++ b/src/ExpectStatus/ExpectStatusV2/package.json
@@ -3,11 +3,9 @@
     "description": "Node PS Task Wrapper To Load on non Windows OS",
     "scripts": {
         "build": "npm run clean && npm run transpile",
-        "buildclean": "npm run clean",
-        "buildtranspile": "npm run transpile",
         "package": "npm prune -production && npm run copy",
-        "copy": "ncp ./node_modules ./task/node_modules && ncp ./dist/src ./task",
-        "clean": "rimraf ./dist/src && rimraf ./dist/test && rimraf ./task/*.js && rimraf ./task/*.js.map && rimraf ./task/node_modules",
+        "copy": "ncp ./node_modules ./task/node_modules && ncp ./dist/src ./task && ./task ./",
+        "clean": "rimraf ./dist/src && rimraf ./dist/test && rimraf ./task/*.js && rimraf ./task/*.js.map && rimraf ./task/node_modules && rimraf ./*.js && rimraf ./*.js.map && rimraf ./node_modules && rimraf ./*.ps1 && rimraf ./icon.png && rimraf ./task.json",
         "transpile": "tsc --project ./"
     },
     "main": "test.js",
